#-----------------------------------------------------------------------------
#
# $Id$
#
#-----------------------------------------------------------------------------

initdir = $(sysconfdir)/init.d
init_SCRIPTS = etherlab
dist_bin_SCRIPTS = gen_payload.py

#-----------------------------------------------------------------------------
