#############################################################################
#
#  $Id$
#
#  Copyright 2012 Richard Hacker (lerichi at gmx dot net)
#
#  This file is part of the PdServ-MATLAB package.
#
#  PdServ-MATLAB is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  PdServ-MATLAB is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with PdServ-MATLAB. See COPYING. If not, see
#  <http://www.gnu.org/licenses/>.
#
#############################################################################



INSTALL (FILES
    Beckhoff_EtherCAT_XML.zip 
    MTS.xml 
    BaumerThalheim_ECAT_Encoders512Bytes_02.05.04.xml 
    ESD-ethercat-can.xml 
    Murrelektronik_IMPACT67.xml 
    EL4132-mod.xml 
    EL4102-mod.xml 
    setup.m
    Beckhoff_EtherCAT_XML.zip
    DESTINATION rtw/blocks/EtherCAT/xml)
